--- a/src/routeComponents/SpearPage/SpearStyle.css
+++ b/src/routeComponents/SpearPage/SpearStyle.css
@@ -7,7 +7,7 @@
         top: 0;
         width: 100%;
         height: 100vh;
-        background-image: url('src/assets/HD2_TV_bg.png');
+        background-image: url('/src/assets/HD2_TV_bg.png');
     }
     .content {
         position: absolute;
