--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,20 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    font-size: clamp(0.7rem, 0.4vw + 0.7rem, 1rem);
 }
 
 .critical-info {
     color: var(--hd-yellow);
     text-shadow: 0 0 10px rgba(255, 232, 31, 0.5);
+}
+
+h1 {
+    font-size: clamp(1rem, 1vw + 1rem, 2rem);
+    line-height: 0.95; /* Tighter vertical spacing */
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
 }
 
 body {
