--- a/src/routeComponents/HomePage/HomeStyle.css
+++ b/src/routeComponents/HomePage/HomeStyle.css
@@ -9,6 +9,7 @@
         width: 100%;
         height: 100vh;
         background-image: url('/src/assets/HD2_TV_bg_w_logo.png');
+        background-size: cover;
     }
 
     .content {
