--- a/src/routeComponents/SpearPage/SpearStyle.css
+++ b/src/routeComponents/SpearPage/SpearStyle.css
@@ -1,7 +1,5 @@
 .spear-page-base {
-    width: 100%;
-    position: relative;
-
+    width: 100vw;
     .static-bg {
         position: fixed;
         left: 0;
@@ -9,9 +7,11 @@
         width: 100%;
         height: 100vh;
         background-image: url('/src/assets/HD2_TV_bg.png');
+        background-size: cover;
     }
 
     .content {
+        overflow-x: hidden;
         position: absolute;
         left: 0;
         top: 0;
