--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
     color-scheme: dark;
     color: var(--hd-text);
     background-color: var(--hd-bg-l);
+    background-image: url('/src/assets/HD2_TV_universalbg.png');
+    background-size: cover;
+    background-repeat: repeat;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
