--- a/src/routeComponents/HomePage/HomeStyle.css
+++ b/src/routeComponents/HomePage/HomeStyle.css
@@ -10,6 +10,7 @@
         height: 100vh;
         background-image: url('/src/assets/HD2_TV_bg_w_logo.png');
         background-size: cover;
+        background-position: center;
     }
 
     .content {
