--- a/src/routeComponents/SpearPage/SpearStyle.css
+++ b/src/routeComponents/SpearPage/SpearStyle.css
@@ -8,6 +8,7 @@
         height: 100vh;
         background-image: url('/src/assets/HD2_TV_bg.png');
         background-size: cover;
+        background-position: center;
     }
 
     .content {
