fixes to the projectiles

--- a/src/routeComponents/SpearPage/components/ProjectileProposal/ProjectileProposalStyles.css
+++ b/src/routeComponents/SpearPage/components/ProjectileProposal/ProjectileProposalStyles.css
@@ -1,33 +1,13 @@
 .projectile-spear-base {
     .text-holder {
-        width: 98vw;
+        width: 98vw
     }
-    h1 {
-        font-size: clamp(.7rem, .7vw + .7rem, 1.6rem);
+    img {
+        max-height: 40vh;
     }
-    .two-projectiles {
-        max-width: 96vw;
-        display: flex;
-        justify-content: space-between;
-        .projectile-section {
-            width: 49%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            img {
-                max-width: 70%;
-                max-height: 50vh;
-            }
-            .heat-text {
-                text-align: left;
-            }
-            .tandem-text {
-                text-align: right;
-            }
-        }
-        h1 {
-            font-size: clamp(.7rem, .7vw + .7rem, 1.6rem);
+    .heat-projectile-section {
+        img {
+            max-height: 60vh;
         }
     }
 }
